- remove translatable="yes" from stock items labels ('gtk-*') so that they don't appear in .pot files

--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -26,7 +26,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="file_quit">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-quit</property>
+                        <property name="label">gtk-quit</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <signal name="activate" handler="gtk_main_quit"/>
@@ -46,7 +46,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="edit_undo">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-undo</property>
+                        <property name="label">gtk-undo</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </widget>
@@ -54,7 +54,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="edit_redo">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-redo</property>
+                        <property name="label">gtk-redo</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </widget>
@@ -173,7 +173,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="edit_mi">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-edit</property>
+                        <property name="label">gtk-edit</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <signal name="activate" handler="on_edit_active_task"/>
@@ -217,7 +217,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="delete_mi">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-delete</property>
+                        <property name="label">gtk-delete</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <signal name="activate" handler="on_delete_task"/>
@@ -238,7 +238,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="imagemenuitem10">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">gtk-about</property>
+                        <property name="label">gtk-about</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <signal name="activate" handler="on_about_clicked"/>
@@ -495,7 +495,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="label" translatable="yes">gtk-add</property>
+                        <property name="label">gtk-add</property>
                         <property name="use_stock">True</property>
                         <property name="response_id">0</property>
                         <signal name="clicked" handler="on_quickadd_button_activate"/>
@@ -733,7 +733,7 @@ Deleting a task cannot be undone.</property>
     <child>
       <widget class="GtkImageMenuItem" id="edit_item">
         <property name="visible">True</property>
-        <property name="label" translatable="yes">gtk-edit</property>
+        <property name="label">gtk-edit</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
         <signal name="activate" handler="on_edit_item_activate"/>
@@ -742,7 +742,7 @@ Deleting a task cannot be undone.</property>
     <child>
       <widget class="GtkImageMenuItem" id="delete_item">
         <property name="visible">True</property>
-        <property name="label" translatable="yes">gtk-delete</property>
+        <property name="label">gtk-delete</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
         <signal name="activate" handler="on_delete_item_activate"/>
@@ -755,7 +755,7 @@ Deleting a task cannot be undone.</property>
     <child>
       <widget class="GtkImageMenuItem" id="colorchooser">
         <property name="visible">True</property>
-        <property name="label" translatable="yes">gtk-select-color</property>
+        <property name="label">gtk-select-color</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
         <signal name="activate" handler="on_colorchooser_activate"/>
@@ -796,7 +796,7 @@ Deleting a task cannot be undone.</property>
         <property name="can_focus">True</property>
         <property name="can_default">True</property>
         <property name="receives_default">True</property>
-        <property name="label" translatable="yes">gtk-help</property>
+        <property name="label">gtk-help</property>
         <property name="use_stock">True</property>
         <property name="response_id">0</property>
       </widget>
@@ -807,7 +807,7 @@ Deleting a task cannot be undone.</property>
         <property name="can_focus">True</property>
         <property name="can_default">True</property>
         <property name="receives_default">True</property>
-        <property name="label" translatable="yes">gtk-cancel</property>
+        <property name="label">gtk-cancel</property>
         <property name="use_stock">True</property>
         <property name="response_id">0</property>
       </widget>
@@ -819,7 +819,7 @@ Deleting a task cannot be undone.</property>
         <property name="can_default">True</property>
         <property name="has_default">True</property>
         <property name="receives_default">True</property>
-        <property name="label" translatable="yes">gtk-ok</property>
+        <property name="label">gtk-ok</property>
         <property name="use_stock">True</property>
         <property name="response_id">0</property>
       </widget>
@@ -882,7 +882,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <child>
       <widget class="GtkImageMenuItem" id="tcm_edit">
         <property name="visible">True</property>
-        <property name="label" translatable="yes">gtk-edit</property>
+        <property name="label">gtk-edit</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
         <signal name="activate" handler="on_edit_active_task"/>
@@ -926,7 +926,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <child>
       <widget class="GtkImageMenuItem" id="tcm_delete">
         <property name="visible">True</property>
-        <property name="label" translatable="yes">gtk-delete</property>
+        <property name="label">gtk-delete</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
         <signal name="activate" handler="on_delete_task"/>
@@ -938,7 +938,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <child>
       <widget class="GtkImageMenuItem" id="ctcm_edit">
         <property name="visible">True</property>
-        <property name="label" translatable="yes">gtk-edit</property>
+        <property name="label">gtk-edit</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
         <signal name="activate" handler="on_edit_done_task"/>
@@ -981,7 +981,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <child>
       <widget class="GtkImageMenuItem" id="ctcm_delete">
         <property name="visible">True</property>
-        <property name="label" translatable="yes">gtk-delete</property>
+        <property name="label">gtk-delete</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
         <signal name="activate" handler="on_delete_task"/>
