--- a/GTG/plugins/geolocalized-tasks/geolocalized.glade
+++ b/GTG/plugins/geolocalized-tasks/geolocalized.glade
@@ -4,7 +4,7 @@
 <glade-interface>
 
 <widget class="GtkDialog" id="ViewTaskLocation">
-  <property name="title" translatable="yes">Set the task location</property>
+  <property name="title" translatable="yes">View the task's location</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
@@ -80,7 +80,7 @@
 	      <property name="show_arrow">True</property>
 
 	      <child>
-		<widget class="GtkToolButton" id="toolbutton1">
+		<widget class="GtkToolButton" id="btn_zoom_in">
 		  <property name="visible">True</property>
 		  <property name="stock_id">gtk-zoom-in</property>
 		  <property name="visible_horizontal">True</property>
@@ -94,25 +94,9 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkToolButton" id="toolbutton2">
+		<widget class="GtkToolButton" id="btn_zoom_out">
 		  <property name="visible">True</property>
 		  <property name="stock_id">gtk-zoom-out</property>
-		  <property name="visible_horizontal">True</property>
-		  <property name="visible_vertical">True</property>
-		  <property name="is_important">False</property>
-		</widget>
-		<packing>
-		  <property name="expand">False</property>
-		  <property name="homogeneous">True</property>
-		</packing>
-	      </child>
-
-	      <child>
-		<widget class="GtkToolButton" id="toolbutton3">
-		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">Set Manual</property>
-		  <property name="use_underline">True</property>
-		  <property name="stock_id">gtk-edit</property>
 		  <property name="visible_horizontal">True</property>
 		  <property name="visible_vertical">True</property>
 		  <property name="is_important">False</property>
@@ -146,7 +130,7 @@
 
 <widget class="GtkDialog" id="SetTaskLocation">
   <property name="visible">True</property>
-  <property name="title" translatable="yes">Set the task location</property>
+  <property name="title" translatable="yes">Set the task's location</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
@@ -222,7 +206,7 @@
 	      <property name="show_arrow">True</property>
 
 	      <child>
-		<widget class="GtkToolButton" id="toolbutton4">
+		<widget class="GtkToolButton" id="btn_zoom_in">
 		  <property name="visible">True</property>
 		  <property name="stock_id">gtk-zoom-in</property>
 		  <property name="visible_horizontal">True</property>
@@ -236,7 +220,7 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkToolButton" id="toolbutton5">
+		<widget class="GtkToolButton" id="btn_zoom_out">
 		  <property name="visible">True</property>
 		  <property name="stock_id">gtk-zoom-out</property>
 		  <property name="visible_horizontal">True</property>
