--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -144,21 +144,35 @@
                     <property name="visible">True</property>
                     <child>
                       <widget class="GtkImageMenuItem" id="new_task_mi">
-                        <property name="label">New _Task</property>
+                        <property name="label" translatable="yes">New _Task</property>
                         <property name="visible">True</property>
                         <property name="tooltip" translatable="yes">Create a new task</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="use_stock">False</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_add_task"/>
+                        <child internal-child="image">
+                          <widget class="GtkImage" id="image1">
+                            <property name="visible">True</property>
+                            <property name="icon_name">gtg-task-new</property>
+                          </widget>
+                        </child>
                       </widget>
                     </child>
                     <child>
                       <widget class="GtkImageMenuItem" id="new_subtask_mi">
-                        <property name="label">New _Subtask</property>
+                        <property name="label" translatable="yes">New _Subtask</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="use_stock">False</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_add_subtask"/>
+                        <child internal-child="image">
+                          <widget class="GtkImage" id="image2">
+                            <property name="visible">True</property>
+                            <property name="icon_name">gtg-task-new</property>
+                          </widget>
+                        </child>
                       </widget>
                     </child>
                     <child>
@@ -177,20 +191,34 @@
                     </child>
                     <child>
                       <widget class="GtkImageMenuItem" id="mark_done_mi">
-                        <property name="label">Mark as _Done</property>
+                        <property name="label" translatable="yes">Mark as _Done</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="use_stock">False</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_mark_as_done"/>
+                        <child internal-child="image">
+                          <widget class="GtkImage" id="image3">
+                            <property name="visible">True</property>
+                            <property name="icon_name">gtg-task-done</property>
+                          </widget>
+                        </child>
                       </widget>
                     </child>
                     <child>
                       <widget class="GtkImageMenuItem" id="task_dismiss">
-                        <property name="label">D_ismiss</property>
+                        <property name="label" translatable="yes">D_ismiss</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="use_stock">False</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_dismiss_task"/>
+                        <child internal-child="image">
+                          <widget class="GtkImage" id="image4">
+                            <property name="visible">True</property>
+                            <property name="icon_name">gtg-task-dismiss</property>
+                          </widget>
+                        </child>
                       </widget>
                     </child>
                     <child>
@@ -872,11 +900,18 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <property name="visible">True</property>
     <child>
       <widget class="GtkImageMenuItem" id="tcm_add_subtask">
-        <property name="label">Add a subtask</property>
+        <property name="label" translatable="yes">Add a subtask</property>
         <property name="visible">True</property>
         <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
+        <property name="use_stock">False</property>
+        <property name="always_show_image">True</property>
         <signal name="activate" handler="on_add_subtask"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image1">
+            <property name="visible">True</property>
+            <property name="icon_name">gtg-task-new</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
@@ -895,20 +930,34 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     </child>
     <child>
       <widget class="GtkImageMenuItem" id="tcm_mark_as_done">
-        <property name="label">Mark as _Done</property>
+        <property name="label" translatable="yes">Mark as _Done</property>
         <property name="visible">True</property>
         <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
+        <property name="use_stock">False</property>
+        <property name="always_show_image">True</property>
         <signal name="activate" handler="on_mark_as_done"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image2">
+            <property name="visible">True</property>
+            <property name="icon_name">gtg-task-done</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
       <widget class="GtkImageMenuItem" id="tcm_dismiss">
-        <property name="label">D_ismiss</property>
+        <property name="label" translatable="yes">D_ismiss</property>
         <property name="visible">True</property>
         <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
+        <property name="use_stock">False</property>
+        <property name="always_show_image">True</property>
         <signal name="activate" handler="on_dismiss_task"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image3">
+            <property name="visible">True</property>
+            <property name="icon_name">gtg-task-dismiss</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
@@ -939,20 +988,34 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     </child>
     <child>
       <widget class="GtkImageMenuItem" id="ctcm_mark_as_not_done">
-        <property name="label">Mark as Not Done</property>
+        <property name="label" translatable="yes">Mark as Not Done</property>
         <property name="visible">True</property>
         <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
+        <property name="use_stock">False</property>
+        <property name="always_show_image">True</property>
         <signal name="activate" handler="on_mark_as_done"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image1">
+            <property name="visible">True</property>
+            <property name="icon_name">gtg-task-undone</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
       <widget class="GtkImageMenuItem" id="ctcm_undismiss">
-        <property name="label">Und_ismiss</property>
+        <property name="label" translatable="yes">Und_ismiss</property>
         <property name="visible">True</property>
         <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
+        <property name="use_stock">False</property>
+        <property name="always_show_image">True</property>
         <signal name="activate" handler="on_dismiss_task"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image2">
+            <property name="visible">True</property>
+            <property name="icon_name">gtg-task-undismiss</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
