--- a/GTG/plugins/geolocalized-tasks/geolocalized.glade
+++ b/GTG/plugins/geolocalized-tasks/geolocalized.glade
@@ -576,7 +576,7 @@ Detailed</property>
 			  <property name="spacing">0</property>
 
 			  <child>
-			    <widget class="GtkCheckButton" id="checkbutton1">
+			    <widget class="GtkCheckButton" id="check_network">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
 			      <property name="label" translatable="yes">Use network</property>
@@ -595,7 +595,7 @@ Detailed</property>
 			  </child>
 
 			  <child>
-			    <widget class="GtkCheckButton" id="checkbutton2">
+			    <widget class="GtkCheckButton" id="check_cellphone">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
 			      <property name="label" translatable="yes">Use cellphone (if available)</property>
@@ -614,7 +614,7 @@ Detailed</property>
 			  </child>
 
 			  <child>
-			    <widget class="GtkCheckButton" id="checkbutton3">
+			    <widget class="GtkCheckButton" id="check_gps">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
 			      <property name="label" translatable="yes">Use gps (if available)</property>
@@ -710,6 +710,31 @@ Detailed</property>
 			  <property name="snap_to_ticks">False</property>
 			  <property name="wrap">False</property>
 			  <property name="adjustment">5 1 100 0.10000000149 10 10</property>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkLabel" id="label8">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">km</property>
+			  <property name="use_underline">False</property>
+			  <property name="use_markup">False</property>
+			  <property name="justify">GTK_JUSTIFY_LEFT</property>
+			  <property name="wrap">False</property>
+			  <property name="selectable">False</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">4</property>
+			  <property name="ypad">0</property>
+			  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			  <property name="width_chars">-1</property>
+			  <property name="single_line_mode">False</property>
+			  <property name="angle">0</property>
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
