--- a/GTG/plugins/geolocalized_tasks/geolocalized.glade
+++ b/GTG/plugins/geolocalized_tasks/geolocalized.glade
@@ -317,56 +317,6 @@
           <widget class="GtkVBox" id="vbox4">
             <property name="visible">True</property>
             <child>
-              <widget class="GtkFrame" id="frame3">
-                <property name="visible">True</property>
-                <property name="border_width">3</property>
-                <property name="label_xalign">0</property>
-                <property name="shadow_type">none</property>
-                <child>
-                  <widget class="GtkAlignment" id="alignment3">
-                    <property name="visible">True</property>
-                    <property name="left_padding">12</property>
-                    <child>
-                      <widget class="GtkHBox" id="hbox4">
-                        <property name="visible">True</property>
-                        <child>
-                          <widget class="GtkComboBoxEntry" id="cmb_accuracy">
-                            <property name="visible">True</property>
-                            <property name="items" translatable="yes">Country
-Region
-Locality
-Postalcode
-Street
-Detailed</property>
-                          </widget>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">0</property>
-                          </packing>
-                        </child>
-                      </widget>
-                    </child>
-                  </widget>
-                </child>
-                <child>
-                  <widget class="GtkLabel" id="label5">
-                    <property name="visible">True</property>
-                    <property name="label" translatable="yes">&lt;b&gt;Accuracy&lt;/b&gt;</property>
-                    <property name="use_markup">True</property>
-                  </widget>
-                  <packing>
-                    <property name="type">label_item</property>
-                  </packing>
-                </child>
-              </widget>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
               <widget class="GtkFrame" id="frame4">
                 <property name="visible">True</property>
                 <property name="border_width">3</property>
@@ -382,6 +332,7 @@ Detailed</property>
                         <child>
                           <widget class="GtkVBox" id="vbox5">
                             <property name="visible">True</property>
+                            <property name="orientation">vertical</property>
                             <child>
                               <widget class="GtkCheckButton" id="check_network">
                                 <property name="label" translatable="yes">Use network</property>
@@ -448,7 +399,7 @@ Detailed</property>
                 </child>
               </widget>
               <packing>
-                <property name="position">1</property>
+                <property name="position">0</property>
               </packing>
             </child>
             <child>
@@ -468,6 +419,7 @@ Detailed</property>
                           <widget class="GtkSpinButton" id="spin_proximityfactor">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="invisible_char">&#x25CF;</property>
                             <property name="adjustment">5 1 100 0.10000000149 10 10</property>
                             <property name="climb_rate">1</property>
                             <property name="digits">1</property>
@@ -482,7 +434,9 @@ Detailed</property>
                           <widget class="GtkLabel" id="label8">
                             <property name="visible">True</property>
                             <property name="xpad">4</property>
-                            <property name="label" translatable="yes">km</property>
+                            <property name="label" translatable="yes">&lt;small&gt;Distance in kilometers from 
+the current location.&lt;/small&gt;</property>
+                            <property name="use_markup">True</property>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
@@ -506,7 +460,7 @@ Detailed</property>
                 </child>
               </widget>
               <packing>
-                <property name="position">2</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </widget>
