--- a/GTG/plugins/rtm_sync/gtk.glade
+++ b/GTG/plugins/rtm_sync/gtk.glade
@@ -187,7 +187,7 @@
 	      <property name="orientation">GTK_PROGRESS_LEFT_TO_RIGHT</property>
 	      <property name="fraction">0</property>
 	      <property name="pulse_step">0.10000000149</property>
-	      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	      <property name="ellipsize">PANGO_ELLIPSIZE_END</property>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
