--- a/GTG/plugins/rtm_sync/gtk.glade
+++ b/GTG/plugins/rtm_sync/gtk.glade
@@ -124,7 +124,7 @@
 
 <widget class="GtkWindow" id="dialogsync">
   <property name="visible">True</property>
-  <property name="title" translatable="yes">Synchronization with RTM</property>
+  <property name="title" translatable="no">Synchronization with RTM</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
   <property name="modal">False</property>
@@ -172,7 +172,6 @@
 	  <child>
 	    <widget class="GtkLabel" id="lbl_dialog">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes"></property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
